Drop-down menu: `z-index` fix

--- a/assets/less/components.less
+++ b/assets/less/components.less
@@ -181,6 +181,7 @@
             position: absolute;
             top: 100%;
             width: auto;
+            z-index: 1;
         }
 
         &.is-visible {
